[package]
name = "raft_consensus"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raft_consensus"
path = "src/bin/main.rs"

[lib]
name = "raft_consensus"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = {version = "0.6.15", features = ["headers"]}
bytes = "1.4.0"
ctrlc = "3.2.5"
env_logger = "0.10.0"
log = "0.4.17"
openraft = "0.8.3"
reqwest = "0.11.16"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"]}
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
